车场评论的图片可以点击查看大图，并且可以滑动查看全部图片